--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,60 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Inter';
+  background: #84C7AE;
 }
 #root{
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .signup{
-  width: 50%;
+  color: #32403B;
+  padding: 1rem 0rem;
+  height: 60%;
+  width: 30%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  gap: 20px;
+  background: #F6FBF9;
+  border-radius: 49.0901px;
+
+}
+.signup h3{
+  background: inherit;
+  font-size: 2rem;
+}
+.signup input{
+  outline: none;
+  padding-left: 20px;
+  width: 90%;
+  height: 10%;
+  background: #FFFFFF;
+  border: 1.53407px solid rgba(0, 0, 0, 0.1);
+  border-radius: 15.3407px;
+}
+.signup button{
+  font-size: 1rem;
+  border: none;
+  width: 60%;
+  height: 10%;
+  text-align: center;
+  color: #FFFFFF;
+  background: #84C7AE;
+  border-radius: 23.011px;
+}
+.signup .signin{
+  background: inherit;
+  text-align: center;
+  color: #32403B;
+  font-size: .8rem;
+}
+.signup a{
+  color: inherit;
+  background: inherit;
+  text-decoration: none;
 }
